исправлена генерация страниц

--- a/KINO/KINO/Views/Manage/Index.cshtml
+++ b/KINO/KINO/Views/Manage/Index.cshtml
@@ -108,7 +108,7 @@
         <dd>
             [ @Html.ActionLink("Изменить", "ChangeEmail", "Manage")]
         </dd>
-        <dt>Номер телефона :</dt>
+        @*<dt>Номер телефона :</dt>
         <dd>
             @(Model.PhoneNumber ?? "Не указан")
             @if (Model.PhoneNumber != null)
@@ -125,7 +125,7 @@
             {
                 <text>[&nbsp;&nbsp;@Html.ActionLink("Добавить", "AddPhoneNumber")&nbsp;&nbsp;]</text>
             }
-        </dd>
+        </dd>*@
         
         @*<dt>Двухфакторная проверка подлинности:</dt>
         <dd>
