--- a/KINO/KINO/Views/Manage/SessionManage.cshtml
+++ b/KINO/KINO/Views/Manage/SessionManage.cshtml
@@ -63,7 +63,7 @@
             @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
                 <div class="input-group" id="datetimepicker1">
-                    <input type="text" class="form-control" name="date_field" />
+                    <input type="text" class="form-control" name="date_field" data-val-required="Требуется поле Дата."/>
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
@@ -84,7 +84,7 @@
                         dateString = Model.Session.SessionTime.ToShortDateString() + " " + Model.Session.SessionTime.ToShortTimeString();
                     }
                     else {
-                        dateString = DateTime.Now.ToShortDateString() + " " + DateTime.Now.ToShortTimeString();
+                        //dateString = DateTime.Now.ToShortDateString() + " " + DateTime.Now.ToShortTimeString();
                     }
                     $('#datetimepicker1').data("DateTimePicker").date('@dateString');
                 });
